Presentation change: double-quotes instead of single-quotes in code sample..
Co-authored-by: mkzhx <mkzh.org@gmail.com>

--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -29,9 +29,9 @@ This dialog only works with numbered lists. The menu item is inactive unless the
 [source,js]
 ----
 tinymce.init({
-  selector: "textarea",  // change this value according to your HTML
-  plugins: "lists",
-  toolbar: "bullist numlist",
+  selector: 'textarea',  // change this value according to your HTML
+  plugins: 'lists',
+  toolbar: 'bullist numlist',
   menu: { tools: { title: 'Tools', items: 'listprops' }},
 });
 ----
