DOC-1781: add List Properties menu item & two commands (mceListUpdate & mceListProps) to Lists Plugin documentation (#2788)
* DOC-1781: lists-cmds.adoc

Added `mceListUpdate` and `mceListProps` commands, descriptions, and basic examples, to `list-cmds.adoc`.

* DOC-1781: list-toolbar-buttons.adoc

Added `listprops` to `lists-toolbar-buttons.adoc`.

* DOC-1781: lists.adoc

added `listprops` to toolbar configuration of basic setup example.

* DOC-1781: lists_indent_on_tab.adoc

Added `listsprops` to toolbar configuration of example  herein.

* DOC-1781: available-menu-items.adoc

Added Lists to listed plugins.

* DOC-1781: list-menu-items.adoc

Added `list-menu-items.adoc` to `/partial/menu-item-ids/`.

Added id and description of `listprops` to this file.

* DOC-1781: lsit-menu-items.adoc

Added note in description about it only working on numbered lists.

* DOC-1781: lists.adoc

Removed `listprops` from toolbar configuration in basic setup example.

Added include statement pointing to /partials/misc/plugin-menu-item-id-boilerplate.adoc.

* DOC-1781: lists_indent_on_tab.adoc

Removed `listprops` from toolbar configuration example.

* DOC-1781: lists-toolbar-buttons.adoc

Removed `listprops` entry.

* DOC-1781: lists.adoc

Added example adding the `listsprops` menu item to the Tools menu.

* DOC-1781: lists.adoc

Markup typo correction.

* DOC-1781: lists.adoc

Correction for verb-noun number agreement: s/are/is/.

* DOC-1781: changelog.md

Added entry for this ticket.

* Update modules/ROOT/pages/lists.adoc

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

* Typo correction.

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Typo correction.

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Typo correction.

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Presentation change: double-quotes instead of single-quotes in code sample..

Co-authored-by: mkzhx <mkzh.org@gmail.com>


--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -20,6 +20,22 @@ tinymce.init({
 });
 ----
 
+== Example adding the `listprops` menu item to the Tools menu
+
+The `listprops` xref:#menu-items[menu item] opens the List Properties dialog.
+
+This dialog only works with numbered lists. The menu item is inactive unless the selection or insertion point is within a numbered list.
+
+[source,js]
+----
+tinymce.init({
+  selector: 'textarea',  // change this value according to your HTML
+  plugins: 'lists',
+  toolbar: 'bullist numlist',
+  menu: { tools: { title: 'Tools', items: 'listprops' }},
+});
+----
+
 == Options
 
 These settings affect the execution of the `+lists+` plugin.
@@ -27,6 +43,8 @@ These settings affect the execution of the `+lists+` plugin.
 include::partial$configuration/lists_indent_on_tab.adoc[leveloffset=+1]
 
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 == Commands
 
