DOC-2081: Updates to 6.5.1 release-notes and accordion.adoc file.

--- a/modules/ROOT/pages/6.4.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.4.2-release-notes.adoc
@@ -50,6 +50,7 @@ Consequently, the _Comments > Delete all conversations_ menu item was not disabl
 
 With this update, when xref:introduction-to-tiny-comments.adoc[Tiny Comments] is running, {productname} checks the comments section state and this menu item is, as expected, disabled when the {productname} comments section contains no comments.
 
+For information on the **Comments** plugin, see: xref:introduction-to-tiny-comments.adoc[Comments plugin].
 
 [[bug-fixes]]
 == Bug fixes
