--- a/modules/ROOT/partials/configuration/details_initial_state.adoc
+++ b/modules/ROOT/partials/configuration/details_initial_state.adoc
@@ -42,7 +42,7 @@ tinymce.init({
 });
 ----
 
-NOTE
+[NOTE]
 ====
 The option does not require the xref:accordion.adoc[Accordion] plugin be loaded to come into effect.
 
