--- a/modules/ROOT/partials/configuration/details_serialized_state.adoc
+++ b/modules/ROOT/partials/configuration/details_serialized_state.adoc
@@ -40,7 +40,7 @@ tinymce.init({
 });
 ----
 
-NOTE
+[NOTE]
 ====
 The option does not require the xref:accordion.adoc[Accordion] plugin be loaded to come into effect.
 
