DOC-2082: Copy edits to TinyMCE 6.5.1 release-notes. update to modules/ROOT/pages/accordion.adoc

--- a/modules/ROOT/pages/accordion.adoc
+++ b/modules/ROOT/pages/accordion.adoc
@@ -50,7 +50,7 @@ include::partial$commands/{plugincode}-cmds.adoc[]
 
 == Events
 
-The {{pluginname}} plugin provides the following events.
+The {pluginname} plugin provides the following events.
 
 include::partial$events/{plugincode}-events.adoc[]
 
