DOC-2026: ai plugin documentation
File infrastructure and boilerplate added:

Files added with boilerplate:

modules/ROOT/pages/ai.adoc
modules/ROOT/examples/live-demos/ai-demo/index.html
modules/ROOT/examples/live-demos/ai-demo/index.js
modules/ROOT/partials/configuration/ai_config_1.adoc
modules/ROOT/partials/configuration/ai_config_2.adoc
modules/ROOT/partials/configuration/ai_config_3.adoc
modules/ROOT/partials/configuration/ai_config_4.adoc
modules/ROOT/partials/toolbar-button-ids/ai-toolbar-buttons.adoc
modules/ROOT/partials/menu-item-ids/ai-menu-items.adoc
modules/ROOT/partials/commands/ai-cmds.adoc
modules/ROOT/partials/events/ai-events.adoc
modules/ROOT/partials/plugin-apis/ai-apis.adoc

Files edited with boilerplate:

modules/ROOT/pages/available-menu-items.adoc
modules/ROOT/pages/available-toolbar-buttons.adoc
modules/ROOT/nav.adoc

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -48,6 +48,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 :pluginpage: advanced-typography.adoc
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: premium
+:pluginname: AI
+:plugincode: ai
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
 :plugincategory: opensource
 :pluginname: Anchor
 :plugincode: anchor
