--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -283,6 +283,7 @@
 *** xref:advtable.adoc[Advanced Tables]
 *** xref:advanced-templates.adoc[Advanced Templates]
 *** xref:advanced-typography.adoc[Advanced Typography]
+*** xref:ai.adoc[AI]
 *** xref:casechange.adoc[Case Change]
 *** xref:checklist.adoc[Checklist]
 *** Comments
