DOC-2083: accordion.adoc
Added back inadvertently removed standard sentence.

--- a/modules/ROOT/pages/accordion.adoc
+++ b/modules/ROOT/pages/accordion.adoc
@@ -34,6 +34,8 @@ tinymce.init({
 
 == Options
 
+The following configuration options affect the behavior of the {pluginname} plugin.
+
 include::partial$configuration/details_initial_state.adoc[][leveloffset=+1]
 
 include::partial$configuration/details_serialized_state.adoc[][leveloffset=+1]
