DOC-2069: use-case-examples.adoc
edited xref to reflect file-name change.

--- a/modules/ROOT/partials/index-pages/use-case-examples.adoc
+++ b/modules/ROOT/partials/index-pages/use-case-examples.adoc
@@ -5,7 +5,7 @@ This table sets out {productname} use-case–specific basic working examples inc
 
 a|
 [.lead]
-xref:example-template-creation.adoc[Template creation]
+xref:uce-template-creation.adoc[Template creation]
 
 Using {productname} to create re-usable and partially-editable templates.
 
