DOC-2069: uce-template-creation.adoc
Edited liveDemo statement to point to re-named folder containing the live demo.

--- a/modules/ROOT/pages/uce-template-creation.adoc
+++ b/modules/ROOT/pages/uce-template-creation.adoc
@@ -12,4 +12,4 @@ It includes the following Open Source and Premium {productname} plugins:
 
 //plugin table here
 
-liveDemo::template-creation[]
+liveDemo::uce-template-creation[]
