DOC-2069: nav.adoc
edited filename of xref pointing to this first use-case example.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -222,7 +222,7 @@
 *** xref:inline-demo.adoc[Inline editor]
 *** xref:distraction-free-demo.adoc[Distraction-free editor]
 ** xref:examples.adoc#use-case-examples[Use case examples]
-*** xref:example-template-creation.adoc[Template creation example]
+*** xref:uce-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
