--- a/modules/ROOT/partials/commands/ai-cmds.adoc
+++ b/modules/ROOT/partials/commands/ai-cmds.adoc
@@ -1,62 +1,27 @@
 [cols="1,3",options="header"]
 |===
 |Command         |Description
-
-|mceCommandOne   |Description one.
-// Boilerplate for commands that require further documentation
-|mceCommandTwo   |Description two. For details, see xref:using-mcecommandtwo[Using `+mcecommandtwo+`].
-|mceCommandThree |Description three.
-|mceCommandFour  |Description four.
-|mceCommandFive  |Description five.
-|mceCommandSix   |Description six.
-// Boilerplate for commands that require further documentation
-|mceCommandSeven |Description seven. For details, see xref:using-mcecommandseven[Using `+mcecommandtwo+`].
-|mceCommandEn    |Description en.
+|mceAiDialog   |Description two. For details, see xref:using-mcecommandtwo[Using `+mcecommandtwo+`].
 |===
 
 .Examples
 [source,js]
 ----
-tinymce.activeEditor.execCommand('mceCommandOne');
-tinymce.activeEditor.execCommand('mceCommandTwo', true|false, { <key1>: '<value1>', <key2>: '<number2>', <key3>: '<value3>', <key4>: '<value4>' });
-tinymce.activeEditor.execCommand('mceCommandThree');
-tinymce.activeEditor.execCommand('mceCommandFour');
-tinymce.activeEditor.execCommand('mceCommandFive');
-tinymce.activeEditor.execCommand('mceCommandSix');
-tinymce.activeEditor.execCommand('mceCommandSeven', true|false, { <key5>: '<value5>' });
+tinymce.activeEditor.execCommand('mceAiDialog');
+tinymce.activeEditor.execCommand('mceAiDialog', true|false, { prompt: '<value1>', generate: true, display: falsev});
+tinymce.activeEditor.execCommand('mceAiDialog', true|false, { thread: 'mce-aithread_1234567' });
 ----
 
-// Boilerplate for further documentation of commands that require it.
-[[using-mcecommmandtwo]]
-== Using `+mcecommandtwo+`
+[[using-mceAiDialog]]
+== Using `+mceAiDialog+`
 
-`+mceCommandTwo+` accepts an object with the following key-value pairs:
+`+mceAiDialog+` accepts an object with any of the following key-value pairs:
 
 [cols="1,,1,2",options="header"]
 |===
-|Name    |Value                                                      |Requirement       |Description
-
-|<key1>    |`+'this'+` or `+'that'+`                                   |<Not> [Rr]equired |Key-value description one.
-|<number1> |`+number+`                                                 |<Not> [Rr]equired |Key-value description two.
-|<key3>    |`+'other'+`, `+'thing'+`, `+'doohickie'+`, or `+'widget'+` |<Not> [Rr]equired |Key-value description three.
-|<key4>    |`+'word'+` or `+'notword'+`                                |<Not> [Rr]equired |Key-value description four.
+|Name     |Value        |Requirement  |Description
+|prompt   |`+string+`   |Not required |The prompt to pre-fill the input field with when the dialog is first opened.
+|generate |`+boolean+`  |Not required |Whether a request should be sent when the dialog is first opened.
+|display  |`+boolean+`  |Not required |Whether to display the input field and generate button in the dialog when the dialog is first opened.
+|thread   |`+'mce-aithread_<thread number>'+`  |Not required |The id of an existing thread to be reopened within the dialog.
 |===
-
-// Further notes as required. Delete this comment once notes are added or if they are not required.
-
-// Boilerplate for further documentation of commands that require it.
-[[using-mcetabletoggleseries]]
-== Using `+mceTableToggleSeries+`
-
-`+mceCommandSeven+` accepts an object with the following key-value pair:
-
-[cols="1,1,1,2",options="header"]
-|===
-|Name |Value      |Requirement       |Description
-
-|<key5> |`+string+` |<Not> [Rr]equired |Key-value description five.
-|===
-
-// Further notes as required. Delete this comment once notes are added or if they are not required.
-
-// Delete all comments before publishing.
