--- a/modules/ROOT/partials/toolbar-button-ids/ai-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/ai-toolbar-buttons.adoc
@@ -1,9 +1,6 @@
 [cols="1,3",options="header"]
 |===
 |Toolbar button identifier |Description
-
-|`+ai-button-1+` |Description one.
-|`+ai-button-2+` |Description two.
-|`+ai-button-3+` |Description three.
-|`+ai-button-n+` |Description en.
+|`+aidialog+`    |Description one.
+|`+aishortcuts+` |Description two.
 |===
