DOC-2069: nav.adoc
Edited file-names and display text in line with re-named category.

Was ‘use case examples’; is now ‘integration examples’.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -221,8 +221,8 @@
 *** xref:classic-demo.adoc[Classic editor mode]
 *** xref:inline-demo.adoc[Inline editor]
 *** xref:distraction-free-demo.adoc[Distraction-free editor]
-** xref:examples.adoc#use-case-examples[Use case examples]
-*** xref:uce-template-creation.adoc[Template creation example]
+** xref:examples.adoc#integration-examples[Integration examples]
+*** xref:ie-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
