--- a/modules/ROOT/pages/examples.adoc
+++ b/modules/ROOT/pages/examples.adoc
@@ -7,7 +7,7 @@
 
 include::partial$index-pages/general-examples.adoc[]
 
-[[use-case-examples]]
-== Use case examples
+[[integration-examples]]
+== Integration examples
 
-include::partial$index-pages/use-case-examples.adoc[]
+include::partial$index-pages/integration-examples.adoc[]
