DOC-2069: ie-template-creation.adoc
Typo correction: missing full-stop no longer missing.

--- a/modules/ROOT/pages/ie-template-creation.adoc
+++ b/modules/ROOT/pages/ie-template-creation.adoc
@@ -41,7 +41,7 @@ a|
 [.lead]
 xref:content-behavior-options.adoc#editable_class[`editable_class`]
 
-Specifies the class name that TinyMCE will use to determine which areas of content are editable
+Specifies the class name that TinyMCE will use to determine which areas of content are editable.
 
 // Dummy table cell.
 // 1. Remove the inline comment markup pre-pending this
