DOC-2068: opensource-plugins.adoc
Added accordions entry to open source plugins index page.

Also commented out the empty cell since this addition makes the number of cells even.

And applied a seen-in-passing copy-edit.

--- a/modules/ROOT/partials/index-pages/opensource-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/opensource-plugins.adoc
@@ -5,6 +5,12 @@ This section lists the open source plugins provided with {productname}.
 
 a|
 [.lead]
+xref:accordion.adoc[Accordion]
+
+Create expandable and collapsible sections.
+
+a|
+[.lead]
 xref:advlist.adoc[Advanced List]
 
 Create styled number and bulleted lists.
@@ -43,7 +49,7 @@ a|
 [.lead]
 xref:code.adoc[Code]
 
-Edit your content's HTML source.
+Edit your content’s HTML source.
 
 a|
 [.lead]
@@ -183,7 +189,7 @@ Show a word count in the {productname} status bar.
 //    odd.
 // 2. Prepend the inline comment markup to this element
 //    when the number of cells in the table is even.
-a|
+//a|
 
 |===
 
