DOC-2068: 6.5.1-release-notes.adoc
Removed comment from include adding `admon-releasenotes-for-stable.adoc` to the release notes.

--- a/modules/ROOT/pages/6.5.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.5.1-release-notes.adoc
@@ -4,7 +4,7 @@
 :keywords: releasenotes, new, changes, bugfixes
 :page-toclevels: 1
 
-//include::partial$misc/admon-releasenotes-for-stable.adoc[]
+include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 [[overview]]
 == Overview
