DOC-2069: ie-template-creation.adoc
Copy-edit.

--- a/modules/ROOT/pages/ie-template-creation.adoc
+++ b/modules/ROOT/pages/ie-template-creation.adoc
@@ -21,7 +21,7 @@ Allows the insertion of merge tags (also known as personalization tokens, or mai
 
 This demo includes merge tag placeholder examples in the demonstration document and equivalent merge tag placeholder strings available for adding to the editable portions of the document.
 
-These placeholders are not, of course, connected to any logic that merges them with a specific data set.
+These placeholders are not, in this demonstration, connected to any logic that merges them with a specific data set.
 
 a|
 [.lead]
