DOC-2069: ie-template-creation.adoc
Copy-edit.

--- a/modules/ROOT/pages/ie-template-creation.adoc
+++ b/modules/ROOT/pages/ie-template-creation.adoc
@@ -37,7 +37,7 @@ xref:content-behavior-options.adoc#editable_root[`editable_root`]
 
 Sets the initial editable state of a TinyMCE instance’s root.
 
-Used here to show a TinyMCE being used to, in effect, present an almost-ready-to-send-out standard document that cannot, in the main, be changed by an end-user.
+Used here to show a TinyMCE being used to present an almost-ready-to-send-out standard document that cannot, in the main, be changed by an end-user.
 
 a|
 [.lead]
