--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -3,11 +3,16 @@
 :description: How to create a basic dialog for TinyMCE.
 :keywords: dialog, dialogapi, api
 
-A dialog configuration has three main parts to match the three main parts of the dialog's UI:
+A dialog configuration has three main parts to match the three main parts of a dialog’s UI.
 
-* *Title:* The title of the dialog. This will display in the header of the dialog.
-* *Body:* The body of the dialog. The body component can be a xref:dialog-components.adoc#panel[panel] or a xref:dialog-components.adoc#tabpanel[tab panel], which can contain an array of xref:dialog-components.adoc#panel-components[panel components] such as buttons, inputs and text.
-* *Buttons:* An array of xref:dialog-footer-buttons.adoc[footer buttons] that are displayed in the dialog's footer.
+. *Title*
+  - the dialog’s title.
+  - It displays in the dialog’s header.
+. *Body*
+  - the dialog’s body.
+  - The body component can be a xref:dialog-components.adoc#panel[panel] or a xref:dialog-components.adoc#tabpanel[tab panel], which can contain an array of xref:dialog-components.adoc#panel-components[panel components] such as buttons, inputs and text.
+. *Buttons*
+  - An array of xref:dialog-footer-buttons.adoc[footer buttons] that are displayed in the dialog's footer.
 
 == Basic example
 
@@ -62,3 +67,47 @@ For more information on the `+dialogApi+` object that is passed to some of the c
 Each of the event callback functions - `+onAction+`, `+onSubmit+`, `+onCancel+`, `+onChange+`, `+onClose+`, and `+onTabChange+` - are shared between all dialog components that may trigger them. For example, *Custom* type footer buttons and dialog panel buttons all trigger `+onAction+`. Therefore, callback functions that may be triggered by multiple components are passed an object (called `+details+` above) that contains the `+name+` of the component that triggered the event.
 
 Any callback function that is not passed a `+details+` object assumes that the dialog will only contain one component which can trigger it or that it does not matter if the function is triggered by multiple components. For example, `+onSubmit+` is only triggered when a user clicks on a *Submit* type footer button, and {productname} assumes that a dialog will only have one *Submit* type button. In comparison, `+onCancel+` and `+onClose+` are both triggered by clicking the `+X+` button in the top right of a dialog or by clicking a *Cancel* type footer button. These two buttons have the same functionality, and therefore {productname} does not differentiate between them.
+
+== Dialog position
+
+By default a dialog presents as a modal object in the center of the editor viewport.
+
+This presented position can be changed for a given dialog by adding an `inline` value to the dialog’s configuration.
+
+[[inline]]
+=== `+inline+`
+
+In a dialog configuration, the `+inline+` option sets the dialog’s presented position to one of two possiblities.
+
+When added to a configuration with the value, `+toolbar+`, it sets the dialog to appear adjacent to the {productname} toolbar.
+
+When added to a configuration with the value, `+bottom+`, it sets the dialog to appear at the bottom of the editor viewport.
+
+*Type:* `+String+`
+
+*Possible values:* `+toolbar+`, `+bottom+`
+
+=== Basic example with the inline value added and set to toolbar
+
+[source,js]
+----
+tinymce.activeEditor.windowManager.open({
+  title: 'Dialog Title', // The dialog's title - displayed in the dialog header
+  body: {
+    type: 'panel', // The root body type - a Panel or TabPanel
+    items: [ // A list of panel components
+      {
+        type: 'htmlpanel', // an HTML panel component
+        html: 'Panel content goes here.'
+      }
+    ]
+  },
+  buttons: [ // A list of footer buttons
+    {
+      type: 'submit',
+      text: 'OK'
+    }
+  ]
+  { inline: 'toolbar' }
+});
+----
