--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -108,6 +108,5 @@ tinymce.activeEditor.windowManager.open({
       text: 'OK'
     }
   ]
-  { inline: 'toolbar' }
-});
+}, { inline: 'toolbar' });
 ----
