--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -213,11 +213,16 @@
 ** xref:migration-from-5x.adoc[Migrating from TinyMCE 5]
 ** xref:migration-from-froala.adoc[Migrating from Froala]
 ** xref:generate-rsa-key-pairs.adoc[Generate public key pairs]
-* Examples
-** xref:basic-example.adoc[Basic example]
-** Full-Featured demos
-*** xref:full-featured-premium-demo.adoc[Including premium features]
-*** xref:full-featured-open-source-demo.adoc[Excluding premium features]
+* xref:examples.adoc[Examples]
+** xref:examples.adoc#general-examples[General examples]
+*** xref:basic-example.adoc[Basic example]
+*** xref:full-featured-open-source-demo.adoc[Full-featured demo including Open Source features]
+*** xref:full-featured-premium-demo.adoc[Full-featured demo Including Open Source and Premium features]
+*** xref:classic-demo.adoc[Classic editor mode]
+*** xref:inline-demo.adoc[Inline editor]
+*** xref:distraction-free-demo.adoc[Distraction-free editor]
+** xref:examples.adoc#integration-examples[Integration examples]
+*** xref:ie-template-creation.adoc[Template creation example]
 ** Tiny Skins and Icon Packs
 *** xref:bootstrap-demo.adoc[Bootstrap Demo]
 *** xref:borderless-demo.adoc[Borderless Demo]
@@ -230,9 +235,6 @@
 *** xref:outside-demo.adoc[Outside Demo]
 *** xref:small-demo.adoc[Small Icons Demo]
 *** xref:snow-demo.adoc[Snow Demo]
-** xref:classic-demo.adoc[Classic editor mode]
-** xref:inline-demo.adoc[Inline editor]
-** xref:distraction-free-demo.adoc[Distraction-free editor]
 * Initial configuration
 ** xref:editor-important-options.adoc[Integration options]
 ** xref:editor-size-options.adoc[Size]
