DOC-2090: dialog-configuration.adoc
Copy-edit.

--- a/modules/ROOT/pages/dialog-configuration.adoc
+++ b/modules/ROOT/pages/dialog-configuration.adoc
@@ -77,7 +77,7 @@ This presented position can be changed by providing a second argument, with an a
 [[inline]]
 === `+inline+`
 
-The `+inline+` option passed to the `editor.windowManager.open()` sets the dialog’s presented position to one of two possiblities.
+The `+inline+` option, passed to `editor.windowManager.open()`, sets the dialog’s presented position to one of two possiblities.
 
 When added to a configuration with the value, `+toolbar+`, it sets the dialog to appear adjacent to the {productname} toolbar.
 
