Copy-edit: errant version string replaced with version string boilerplate.

--- a/-new-material-templates/release-notes-template/pages/<x.y[.z]>-release-notes.adoc
+++ b/-new-material-templates/release-notes-template/pages/<x.y[.z]>-release-notes.adoc
@@ -9,7 +9,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 [[overview]]
 == Overview
 
-{productname} <x.y[.z]> was released for {enterpriseversion} and {cloudname} on <weekday>, <month> <DD>^<st|nd|rd|th>^, <YYYY>. These release notes provide an overview of the changes for {productname} 6.5, including:
+{productname} <x.y[.z]> was released for {enterpriseversion} and {cloudname} on <weekday>, <month> <DD>^<st|nd|rd|th>^, <YYYY>. These release notes provide an overview of the changes for {productname} <x.y[.z]>, including:
 
 // Remove sections and section boilerplates as necessary.
 // Pluralise as necessary or remove the placeholder plural marker.
