Missing text no longer missing
Added missing introductory paragraph to bug-fixes section of release notes template

--- a/-new-material-templates/release-notes-template/pages/<x.y[.z]>-release-notes.adoc
+++ b/-new-material-templates/release-notes-template/pages/<x.y[.z]>-release-notes.adoc
@@ -205,6 +205,8 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 [[bug-fixes]]
 == Bug fixes
 
+{productname} <x.y[.z]> also includes the following bug fix<es>:
+
 === <TINY-vwxyz 1 changelog entry>
 //#TINY-vwxyz1
 
