--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,6 +403,9 @@
 **** xref:6.6-release-notes.adoc#overview[Overview]
 **** xref:6.6-release-notes.adoc#new-premium-plugin[New Premium Plugin]
 **** xref:6.6-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:6.6-release-notes.adoc#improvement[Improvement]
+**** xref:6.6-release-notes.adoc#additions[Additions]
+**** xref:6.6-release-notes.adoc#bug-fix[Bug fix]
 *** TinyMCE 6.5.1
 **** xref:6.5.1-release-notes.adoc#overview[Overview]
 **** xref:6.5.1-release-notes.adoc#new-open-source-plugin[New Open Source Plugin]
