--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -13,6 +13,10 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 
 * xref:new-premium-plugin[New Premium plugin]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+* xref:improvement[Improvement]
+* xref:additions[Additions]
+* xref:bug-fix[Bug fix]
+
 
 [[new-premium-plugin]]
 New Premium plugin
@@ -38,3 +42,59 @@ The **Premium Skins and Icon Packs** release includes the following updates:
 The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 6.6 skin, Oxide.
 
 For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+
+
+[[improvement]]
+== Improvement
+
+{productname} 6.6 also includes the following improvement:
+
+=== When defining a modal or inline dialog, if the `buttons` property is `undefined` or an empty array, the footer will now no longer be rendered
+//#TINY-9996
+
+// CCFR here.
+
+
+[[additions]]
+== Additions
+
+{productname} 6.6 also includes the following additions:
+
+=== Added new `bottom` to inline dialog type
+//#TINY-9888
+
+This new inline dialog option allows the inline dialog to be positioned at the bottom of the editor
+
+// more CCFR here.
+
+=== Added new `persistent` option to `WindowParams`.
+//#TINY-9991
+
+This new option allows the inline dialog to be persistent, meaning that it will not be closed when the user clicks outside of the dialog
+
+// more CCFR here.
+
+=== - New `ai`, `ai-prompt` and `send` icons.
+//#TINY-9942
+
+// CCFR here.
+
+// link out to ai premium plugin page here?
+
+=== New `streamContent` property for the `iframe` dialog component which controls dialog `setData()` behavior. 
+//#TINY-10032
+
+With the property set to `true`, frame content will update with `document.write()` to avoid reloading the frame, and end scroll positions will be maintained as new content streams in.
+
+// more CCFR here.
+
+
+[[bug-fix]]
+== Bug fix
+
+{productname} 6.6 also includes the following bug fix:
+
+=== Fixed an issue that prevented setting the inline dialog `size` to _medium_ or _normal_.
+//#TINY-10015
+
+// CCFR here.
