DOC-2093: 6.6-release-notes.adoc
Added comment block containing background info for plugin write-up.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -52,7 +52,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === When defining a modal or inline dialog, if the `buttons` property is `undefined` or an empty array, the footer will now no longer be rendered
 //#TINY-9996
 
-// CCFR here.
+////
+The new AI plugin will feature a dialog without any footer buttons. This means it will rely on the name of the triggered component within the onAction callback, and does not implement the onSubmit or onClose callbacks.
+
+To prevent any footer buttons from appearing, the buttons parameter in the dialog spec is set to an empty array. Since this is possible, and having no footer is supported, the buttons parameter should instead be made optional.
+
+Removing the footer buttons should also remove the element and reduce whitespace in the dialog.
+
+DoD: prevent footer from rendering for dialogs and inline dialogs if `buttons` is `undefined` or `[]`.
+////
 
 
 [[additions]]
