DOC-2098: table_merge_content_on_paste.adoc
Typo correction in include statement.

--- a/modules/ROOT/partials/configuration/table_merge_content_on_paste.adoc
+++ b/modules/ROOT/partials/configuration/table_merge_content_on_paste.adoc
@@ -1,7 +1,7 @@
 [[table_merge_content_on_paste]]
 == `+table_merge_content_on_paste+`
 
-include::partials$misc/admon-requires-6.5v.adoc[]
+include::partial$misc/admon-requires-6.5v.adoc[]
 
 This option sets the behavior of the editor when a table is pasted into another table.
 
